added api validations

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,4 @@
-base_url=https://reqres.in
-users_path= /api/users
+base_url=https://odnxt-api-automation-template.azurewebsites.net/
+agreement_path= /agreement
+review_path= /review
 content_type = application/json
