--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.0.2</version>
+            <version>5.4.0</version>
         </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
@@ -99,15 +99,16 @@
         </dependency>
 
         <dependency>
-            <artifactId>selenium-java</artifactId>
             <groupId>org.seleniumhq.selenium</groupId>
-            <version>3.141.59</version>
+            <artifactId>selenium-java</artifactId>
+            <version>4.10.0</version>
+                
         </dependency>
 
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-server</artifactId>
-            <version>3.12.0</version>
+            <version>4.0.0-alpha-2</version>
         </dependency>
 
         <dependency>
@@ -174,6 +175,7 @@
                 <version>3.2</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
+                    <wireProtocol>none</wireProtocol>
                     <source>1.8</source>
                     <target>1.8</target>
                     <!--                    <compilerArgument>-Werror</compilerArgument>-->
