--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,3 @@
-base_url=https://odnxt-api-automation-template.azurewebsites.net/
-agreement_path= /agreement
-review_path= /review
+base_url=https://reqres.in
+users_path= /api/users
 content_type = application/json
